--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,21 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  padding-top: 40px;
+  display: flex;
+  gap: 25px;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.value {
+  font-size: 43px;
+}
+.label {
+  text-transform: uppercase;
+  font-size: 15px;
+}
